[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/ui/screens/level_selection/LoadButton.gd" type="Script" id=1]
[ext_resource path="res://resources/ui/icons/screens/level_selection/locked.png" type="Texture" id=2]
[ext_resource path="res://resources/ui/icons/screens/level_selection/coming_soon.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/ui_elements/GameTextureButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/ui/icons/screens/level_selection/pressed_background.tres" type="Texture" id=5]
[ext_resource path="res://resources/ui/icons/screens/level_selection/boss_level_0_unknown.png" type="Texture" id=6]
[ext_resource path="res://resources/ui/icons/screens/level_selection/background/active_flames_1.png" type="Texture" id=7]
[ext_resource path="res://resources/ui/icons/screens/level_selection/background/active_flames_0.png" type="Texture" id=8]
[ext_resource path="res://resources/ui/theme/ktg_theme.tres" type="Theme" id=9]
[ext_resource path="res://resources/shader/white.png" type="Texture" id=10]
[ext_resource path="res://resources/shader/fireFX.shader" type="Shader" id=11]












[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 11 )

[sub_resource type="AnimatedTexture" id=1]
frames = 2
frame_0/texture = ExtResource( 8 )
frame_1/texture = ExtResource( 7 )
frame_1/delay_sec = 0.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 11 )

[node name="LoadButton" instance=ExtResource( 4 )]
material = SubResource( 2 )
margin_right = -874.0
margin_bottom = -450.0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 3
texture_hover = ExtResource( 5 )
texture_focused = SubResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="." index="0"]
visible = false
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossPortrait" type="TextureRect" parent="." index="1"]
modulate = Color( 1, 1, 1, 0.960784 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockedOverlay" type="TextureRect" parent="." index="2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = -6
custom_constants/margin_top = -6
custom_constants/margin_left = -6
custom_constants/margin_bottom = -6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="TextureRect" parent="Margin" index="0"]
margin_left = -6.0
margin_top = -6.0
margin_right = 156.0
margin_bottom = 156.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockedOverlay" type="TextureRect" parent="Margin" index="1"]
visible = false
margin_left = -6.0
margin_top = -6.0
margin_right = 156.0
margin_bottom = 156.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComingSoonOverlay" type="TextureRect" parent="." index="3"]
visible = false
margin_left = -6.0
margin_top = -6.0
margin_right = 156.0
margin_bottom = 156.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="." index="4"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -21.0
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 3 )
text = "LEVEL 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="." to="." method="_on_LoadButton_button_up"]
